--- a/package.json
+++ b/package.json
@@ -35,39 +35,38 @@
   },
   "homepage": "https://github.com/effect-ts/build-utils",
   "dependencies": {
-    "@effect/cli": "^0.5.0",
-    "@effect/data": "^0.12.9",
-    "@effect/io": "^0.26.2",
-    "@effect/platform": "^0.1.0",
-    "@effect/platform-node": "^0.1.1",
-    "@effect/printer": "^0.8.0",
-    "@effect/printer-ansi": "^0.8.0",
-    "@effect/schema": "^0.20.3"
+    "@effect/cli": "^0.9.0",
+    "@effect/platform-node": "^0.10.2",
+    "@effect/schema": "^0.32.0",
+    "effect": "2.0.0-next.23",
+    "effect-schema-class": "^0.12.0",
+    "glob": "^10.3.3"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
-    "@changesets/cli": "^2.26.1",
-    "@repo-tooling/eslint-plugin-dprint": "^0.0.4",
+    "@changesets/cli": "^2.26.2",
+    "@effect/eslint-plugin": "^0.1.1",
     "@types/doctrine": "0.0.5",
     "@types/fs-extra": "^11.0.1",
     "@types/glob": "^8.1.0",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.4.5",
     "@types/prettier": "^2.7.3",
-    "@types/rimraf": "^4.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "@vitest/coverage-c8": "^0.32.2",
-    "eslint": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "@vitest/coverage-v8": "^0.34.1",
+    "eslint": "^8.46.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-codegen": "^0.17.0",
-    "eslint-plugin-deprecation": "^1.4.1",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-deprecation": "^1.5.0",
+    "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "tsup": "^7.0.0",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+    "prettier": "2",
+    "rimraf": "^5.0.1",
+    "tsup": "^7.1.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.8",
+    "vitest": "^0.34.1"
   },
   "tags": [],
   "keywords": [],
