--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "prettier": "2",
     "rimraf": "^5.0.1",
+    "ts-node": "^10.9.1",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
