--- a/package.json
+++ b/package.json
@@ -35,22 +35,22 @@
   },
   "homepage": "https://github.com/effect-ts/build-utils",
   "dependencies": {
-    "@effect/cli": "^0.9.0",
-    "@effect/platform-node": "^0.10.5",
-    "@effect/schema": "^0.32.0",
-    "effect": "2.0.0-next.23",
-    "effect-schema-class": "^0.12.0",
+    "@effect/cli": "^0.10.0",
+    "@effect/platform-node": "^1.0.0",
+    "@effect/schema": "^0.33.0",
+    "effect": "2.0.0-next.24",
+    "effect-schema-class": "^0.13.0",
     "glob": "^10.3.3"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
-    "@effect/eslint-plugin": "^0.1.1",
+    "@effect/eslint-plugin": "^0.1.2",
     "@types/doctrine": "0.0.5",
     "@types/fs-extra": "^11.0.1",
     "@types/glob": "^8.1.0",
-    "@types/node": "^20.4.6",
-    "@types/prettier": "^2.7.3",
+    "@types/node": "^20.4.7",
+    "@types/prettier": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "@vitest/coverage-v8": "^0.34.1",
@@ -61,7 +61,7 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "prettier": "2",
+    "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
     "tsup": "^7.2.0",
