--- a/package.json
+++ b/package.json
@@ -35,39 +35,39 @@
   },
   "homepage": "https://github.com/effect-ts/build-utils",
   "dependencies": {
-    "@effect/cli": "^0.10.0",
-    "@effect/platform-node": "^0.11.0",
-    "@effect/schema": "^0.33.0",
-    "effect": "2.0.0-next.24",
-    "effect-schema-class": "^0.13.0",
-    "glob": "^10.3.3"
+    "@effect/cli": "^0.15.1",
+    "@effect/match": "^0.37.0",
+    "@effect/platform-node": "^0.19.9",
+    "@effect/schema": "^0.39.2",
+    "effect": "2.0.0-next.44",
+    "glob": "^10.3.10"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
     "@effect/eslint-plugin": "^0.1.2",
-    "@types/doctrine": "0.0.5",
-    "@types/fs-extra": "^11.0.1",
+    "@types/doctrine": "0.0.7",
+    "@types/fs-extra": "^11.0.2",
     "@types/glob": "^8.1.0",
-    "@types/node": "^20.4.7",
+    "@types/node": "^20.8.2",
     "@types/prettier": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "@vitest/coverage-v8": "^0.34.1",
-    "eslint": "^8.46.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "@vitest/coverage-v8": "^0.34.6",
+    "eslint": "^8.50.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-codegen": "^0.17.0",
-    "eslint-plugin-deprecation": "^1.5.0",
-    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-deprecation": "^2.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "prettier": "^3.0.1",
-    "rimraf": "^5.0.1",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
     "tsup": "^7.2.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.8",
-    "vitest": "^0.34.1"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.10",
+    "vitest": "^0.34.6"
   },
   "tags": [],
   "keywords": [],
