--- a/package.json
+++ b/package.json
@@ -34,38 +34,36 @@
     "url": "https://github.com/effect-ts/build-utils/issues"
   },
   "homepage": "https://github.com/effect-ts/build-utils",
-  "dependencies": {
-    "@effect/cli": "^0.19.0",
-    "@effect/platform-node": "^0.27.6",
-    "@effect/schema": "^0.46.3",
-    "effect": "2.0.0-next.52",
-    "glob": "^10.3.10"
-  },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
+    "@effect/cli": "0.0.0-snapshot-ca74efb",
     "@effect/eslint-plugin": "^0.1.2",
-    "@types/doctrine": "0.0.7",
-    "@types/fs-extra": "^11.0.2",
+    "@effect/platform-node": "^0.32.2",
+    "@effect/schema": "^0.49.4",
+    "@types/doctrine": "0.0.9",
+    "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
-    "@types/node": "^20.8.4",
+    "@types/node": "^20.10.0",
     "@types/prettier": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@typescript-eslint/eslint-plugin": "^6.13.0",
+    "@typescript-eslint/parser": "^6.13.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "eslint": "^8.51.0",
+    "effect": "2.0.0-next.56",
+    "eslint": "^8.54.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-codegen": "^0.17.0",
+    "eslint-plugin-codegen": "^0.21.0",
     "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "prettier": "^3.0.3",
+    "glob": "^10.3.10",
+    "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
-    "tsup": "^7.2.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.11",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
     "vitest": "^0.34.6"
   },
   "tags": [],
