--- a/package.json
+++ b/package.json
@@ -34,39 +34,37 @@
     "url": "https://github.com/effect-ts/build-utils/issues"
   },
   "homepage": "https://github.com/effect-ts/build-utils",
-  "dependencies": {
-    "@effect/cli": "0.0.0-snapshot-cc03d2b3160cf7fbf5a4dff3cfe262c419f67328",
-    "@effect/platform-node": "^0.33.1",
-    "@effect/schema": "^0.51.0",
-    "effect": "2.0.0-next.57",
-    "glob": "^10.3.10"
-  },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@effect/cli": "0.31.7",
     "@effect/eslint-plugin": "^0.1.2",
+    "@effect/platform-node": "^0.42.7",
+    "@effect/schema": "^0.61.5",
     "@types/doctrine": "0.0.9",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
-    "@types/node": "^20.10.1",
+    "@types/node": "^20.11.14",
     "@types/prettier": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@vitest/coverage-v8": "^0.34.6",
-    "eslint": "^8.54.0",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "@vitest/coverage-v8": "^1.2.2",
+    "effect": "2.2.3",
+    "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-codegen": "^0.21.0",
+    "eslint-plugin-codegen": "^0.23.0",
     "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
-    "prettier": "^3.1.0",
+    "glob": "^10.3.10",
+    "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.4",
-    "vitest": "^0.34.6"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vitest": "^1.2.2"
   },
   "tags": [],
   "keywords": [],
