--- a/package.json
+++ b/package.json
@@ -37,34 +37,34 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
-    "@effect/cli": "0.31.7",
+    "@effect/cli": "0.33.13",
     "@effect/eslint-plugin": "^0.1.2",
-    "@effect/platform-node": "^0.42.7",
-    "@effect/schema": "^0.61.5",
+    "@effect/platform-node": "^0.44.6",
+    "@effect/schema": "^0.62.8",
     "@types/doctrine": "0.0.9",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
-    "@types/node": "^20.11.14",
+    "@types/node": "^20.11.19",
     "@types/prettier": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "@typescript-eslint/parser": "^6.20.0",
-    "@vitest/coverage-v8": "^1.2.2",
-    "effect": "2.2.3",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vitest/coverage-v8": "^1.3.1",
+    "effect": "2.3.7",
     "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-codegen": "^0.23.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "glob": "^10.3.10",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
-    "tsup": "^8.0.1",
+    "tsup": "^8.0.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vitest": "^1.2.2"
+    "vite": "^5.1.3",
+    "vitest": "^1.3.1"
   },
   "tags": [],
   "keywords": [],
@@ -72,5 +72,8 @@
     "global": [],
     "modules": [],
     "side": []
+  },
+  "dependencies": {
+    "@effect/platform": "^0.45.5"
   }
 }
