--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@changesets/cli": "^2.27.1",
     "@effect/cli": "0.33.13",
     "@effect/eslint-plugin": "^0.1.2",
+    "@effect/platform": "^0.45.5",
     "@effect/platform-node": "^0.44.6",
     "@effect/schema": "^0.62.8",
     "@types/doctrine": "0.0.9",
@@ -72,8 +73,5 @@
     "global": [],
     "modules": [],
     "side": []
-  },
-  "dependencies": {
-    "@effect/platform": "^0.45.5"
   }
 }
