--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "engines": {
     "node": ">=16.17.1"
   },
+  "packageManager": "pnpm@9.8.0",
   "scripts": {
     "version": "changeset version && pnpm install --no-frozen-lockfile && pnpm run docs-update",
     "release": "pnpm run build && changeset publish",
