--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "engines": {
     "node": ">=16.17.1"
   },
+  "packageManager": "pnpm@9.8.0",
   "scripts": {
     "version": "changeset version && pnpm install --no-frozen-lockfile && pnpm run docs-update",
     "release": "pnpm run build && changeset publish",
@@ -36,42 +37,36 @@
   "homepage": "https://github.com/effect-ts/build-utils",
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.5",
-    "@effect/cli": "0.36.41",
-    "@effect/eslint-plugin": "^0.1.2",
-    "@effect/platform": "^0.55.6",
-    "@effect/platform-node": "^0.51.6",
-    "@effect/schema": "^0.67.19",
+    "@changesets/cli": "^2.27.7",
+    "@effect/cli": "0.42.0",
+    "@effect/eslint-plugin": "^0.2.0",
+    "@effect/platform": "^0.63.0",
+    "@effect/platform-node": "^0.58.0",
+    "@effect/schema": "^0.72.0",
     "@types/doctrine": "0.0.9",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
-    "@types/node": "^20.14.2",
-    "@types/prettier": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "effect": "3.2.9",
+    "@types/node": "^22.5.2",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "@vitest/coverage-v8": "^2.0.5",
+    "effect": "3.7.0",
     "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-codegen": "^0.28.0",
     "eslint-plugin-deprecation": "^3.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "glob": "^10.4.1",
-    "prettier": "^3.3.1",
-    "rimraf": "^5.0.7",
+    "glob": "^11.0.0",
+    "prettier": "^3.3.3",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "tsup": "^8.1.0",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.12",
-    "vitest": "^1.6.0"
+    "tsup": "^8.2.4",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2",
+    "vitest": "^2.0.5"
   },
   "tags": [],
-  "keywords": [],
-  "config": {
-    "global": [],
-    "modules": [],
-    "side": []
-  }
+  "keywords": []
 }
