--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: pnpm install
+      - name: Type check
+        run: tsc --noEmit
       - run: pnpm build
       - name: Create Release Pull Request or Publish
         id: changesets
