--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -26,4 +26,6 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: pnpm install
+      - name: Type check
+        run: tsc --noEmit
       - run: pnpm build
