--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/doctrine": "0.0.9",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
+    "@types/micromatch": "^4.0.9",
     "@types/node": "^22.5.2",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
@@ -66,5 +67,8 @@
     "vitest": "^2.0.5"
   },
   "tags": [],
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "micromatch": "^4.0.8"
+  }
 }
