--- a/package.json
+++ b/package.json
@@ -34,37 +34,36 @@
   },
   "homepage": "https://github.com/effect-ts/build-utils",
   "devDependencies": {
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.7",
-    "@effect/cli": "0.42.0",
-    "@effect/eslint-plugin": "^0.2.0",
-    "@effect/platform": "^0.63.0",
-    "@effect/platform-node": "^0.58.0",
-    "@effect/schema": "^0.72.0",
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.29.5",
+    "@effect/cli": "0.66.1",
+    "@effect/eslint-plugin": "^0.3.2",
+    "@effect/platform": "^0.87.1",
+    "@effect/platform-node": "^0.88.3",
+    "@eslint/js": "^9.29.0",
     "@types/doctrine": "0.0.9",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.5.2",
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
-    "@vitest/coverage-v8": "^2.0.5",
-    "effect": "3.7.0",
-    "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-codegen": "^0.28.0",
-    "eslint-plugin-deprecation": "^3.0.0",
-    "eslint-plugin-import": "^2.29.1",
+    "@types/node": "^24.0.4",
+    "@typescript-eslint/parser": "^8.35.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "effect": "3.16.10",
+    "eslint": "^9.29.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import-x": "^4.16.0",
+    "eslint-plugin-local-rules": "^3.0.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
-    "glob": "^11.0.0",
-    "prettier": "^3.3.3",
+    "glob": "^11.0.3",
+    "prettier": "^3.6.1",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "tsup": "^8.2.4",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.2",
-    "vitest": "^2.0.5"
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.0",
+    "vite": "^7.0.0",
+    "vitest": "^3.2.4"
   },
   "tags": [],
   "keywords": [],
